--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "media-server-plus",
   "version": "1.0.0",
   "description": "Refactoring of MS repository code",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/server.js"
   },
   "repository": {
     "type": "git",
